--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,8 +39,8 @@
         android:layout_gravity="bottom"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
+        android:theme="@style/BottomNavigationTheme"
         android:background="@android:color/white"
-        android:theme="@style/ThemeOverlay.AppCompat.Light"
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/menu" />
 
