--- a/app/src/main/res/drawable/bottom_navi_color.xml
+++ b/app/src/main/res/drawable/bottom_navi_color.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:state_checked="true"
-        android:color="#606060" />
+        android:color="#606060"
+        />
     <item
         android:state_checked="false"
-        android:color="#000000" />
+        android:color="#000000"
+        />
+
 </selector>
