--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:id="@+id/action_home"
         android:enabled="true"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_home_24px"
         android:title="홈"/>
 
     <item
-        android:id="@+id/action_my"
+        android:id="@+id/action_person"
         android:enabled="true"
-        android:icon="@drawable/ic_person_black_24dp"
-        android:title="내정보"/>
+        android:icon="@drawable/ic_person_24px"
+        android:title="내정보" />
 
     <item
-        android:id="@+id/action_book"
+        android:id="@+id/action_booking"
         android:enabled="true"
-        android:icon="@drawable/ic_library_books_black_24dp"
+        android:icon="@drawable/ic_library_books_24px"
         android:title="예약내역"/>
 
     <item
         android:id="@+id/action_more"
         android:enabled="true"
-        android:icon="@drawable/ic_more_horiz_black_24dp"
+        android:icon="@drawable/ic_more_horiz_24px"
         android:title="더보기"/>
 </menu>
