home view complete

--- a/app/src/main/res/menu/menu_main_toolbar.xml
+++ b/app/src/main/res/menu/menu_main_toolbar.xml
@@ -6,6 +6,8 @@
         android:icon="@drawable/ic_search_20px"
         android:title="Search"
         app:showAsAction="always"
+        android:checkable="true"
+        android:onClick="SearchMenu"
         />
 
     <item
