scrollview & toolbar serachview

--- a/app/src/main/res/menu/menu_main_toolbar.xml
+++ b/app/src/main/res/menu/menu_main_toolbar.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search_20px"
         android:title="Search"
         app:showAsAction="always"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         />
 
-    <item
-        android:id="@+id/action_bell"
-        android:icon="@drawable/ic_bell_20px"
-        android:title="Bell"
-        app:showAsAction="always"
-        />
 </menu>
