--- a/app/src/main/res/layout/frag_booking.xml
+++ b/app/src/main/res/layout/frag_booking.xml
@@ -1,57 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginTop="20dp"
-    android:layout_marginBottom="20dp"
-    android:weightSum="10"
-    android:orientation="horizontal"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/image_listView"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/jari_loding" />
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
-            android:layout_weight="8"
-            android:gravity="center"
-            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/title_listView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                tools:text="가게 이름" />
-
-            <TextView
-                android:id="@+id/adress_listView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                tools:text="가게 주소" />
-
-            <TextView
-                android:id="@+id/reservation_listView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:text="번호 / 예약" />
-
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/reservation_btn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_weight="2"
-            android:layout_gravity="center"
-            android:text="취소" />
-
-    </LinearLayout>
+</LinearLayout>
