--- a/app/src/main/res/layout/frag_more.xml
+++ b/app/src/main/res/layout/frag_more.xml
@@ -5,16 +5,61 @@
     android:layout_height="match_parent"
     android:scrollbars="vertical">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="20dp"
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="It is more view"
-            tools:ignore="MissingConstraints" />
+            android:layout_height="168dp"
+            android:layout_marginBottom="40dp"
+            android:background="#000000"
+            android:gravity="center"
+            android:text="광고 들어갈 자리"
+            android:textColor="#ffffff"
+            android:textSize="40sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:gravity="center_vertical"
+            android:text="공지사항"
+            android:textSize="24sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:gravity="center_vertical"
+            android:text="이벤트"
+            android:textSize="24sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:gravity="center_vertical"
+            android:text="고객센터"
+            android:textSize="24sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:gravity="center_vertical"
+            android:text="환경설정"
+            android:textSize="24sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:gravity="center_vertical"
+            android:text="현재 버전"
+            android:textSize="24sp" />
 
     </LinearLayout>
 </ScrollView>
