--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,8 +12,8 @@
     </style>
 
     <style name="BottomNavigationTheme" parent="Widget.MaterialComponents.BottomNavigationView">
-        <item name="itemIconTint">#000000</item>
-        <item name="itemTextColor">#000000</item>
+        <item name="itemIconTint">@android:color/black</item>
+        <item name="itemTextColor">@android:color/black</item>
     </style>
 
 </resources>
