--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,15 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@drawable/toolbar_custom"
         android:gravity="center"
-        app:menu="@menu/menu_main_toolbar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
+        app:menu="@menu/menu_main_toolbar">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="자리있니?"
+            android:textColor="@android:color/black"
+            android:textSize="24sp" />
 
     </androidx.appcompat.widget.Toolbar>
 
