--- a/app/src/main/res/layout/frag_booking.xml
+++ b/app/src/main/res/layout/frag_booking.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/booking_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#f0f0f0" />
