--- a/app/src/main/res/layout/frag_person_alarm_listitem.xml
+++ b/app/src/main/res/layout/frag_person_alarm_listitem.xml
@@ -13,7 +13,7 @@
     android:background="@android:color/white">
 
     <TextView
-        android:id="@+id/alarm_recycler_text"
+        android:id="@+id/alarm_tv_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
