Revert "20201011 홈 화면 서버에 있는 데이터 연결, 뒤로가기 물리버튼 구현"

--- a/app/src/main/res/layout/frag_home_menu_listitem.xml
+++ b/app/src/main/res/layout/frag_home_menu_listitem.xml
@@ -14,7 +14,7 @@
     android:id="@+id/linear_list" >
 
     <ImageView
-        android:id="@+id/home_listView_image"
+        android:id="@+id/image_listView"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:src="@drawable/jari_loding" />
@@ -29,26 +29,23 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/home_listView_title"
+            android:id="@+id/title_listView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            tools:text="가게 이름"
-            android:textColor="@android:color/black"/>
+            tools:text="가게 이름" />
 
         <TextView
-            android:id="@+id/home_listView_address"
+            android:id="@+id/address_listView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            android:textColor="@android:color/black"
             tools:text="가게 주소" />
 
         <TextView
-            android:id="@+id/home_listView_phone"
+            android:id="@+id/reservation_listView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
             tools:text="번호 / 예약" />
 
     </LinearLayout>
