20201108 검색 구현 완료 ( 모든 기능 구현 완료 )

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@drawable/toolbar_custom"
         android:gravity="center"
+        app:collapseIcon="@drawable/ic_arrow_back_20px"
         app:menu="@menu/menu_main_toolbar">
 
         <TextView
