20201109 디자인 완료 ( 완성 )

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:onClick="SignIn"
+                android:background="@drawable/login_signup"
                 android:text="로그인" />
 
             <Button
@@ -53,6 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:onClick="SignUp"
+                android:background="@drawable/login_signup"
                 android:text="회원가입 " />
         </LinearLayout>
     </LinearLayout>
