--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -12,15 +12,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView"
+        <ImageView
+            android:id="@+id/home_ig_ad"
             android:layout_width="match_parent"
             android:layout_height="168dp"
-            android:background="#000000"
             android:gravity="center"
-            android:text="광고 들어갈 자리"
-            android:textColor="#ffffff"
-            android:textSize="40sp" />
+            android:background="@drawable/ad" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
