--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -68,6 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:onClick="make"
+                android:background="@drawable/cancel"
                 android:text="가입" />
 
             <Button
@@ -76,6 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:onClick="cancel"
+                android:background="@drawable/cancel"
                 android:text="취소" />
         </LinearLayout>
     </LinearLayout>
