--- a/app/src/main/res/layout/frag_store_info.xml
+++ b/app/src/main/res/layout/frag_store_info.xml
@@ -187,6 +187,7 @@
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
                 android:textColor="@android:color/black"
+                android:background="@drawable/wait"
                 android:text="@string/store_info_wait_btn" />
 
         </LinearLayout>
