20201110 비밀번호 버그 수정, 레이아웃 수정

--- a/app/src/main/res/layout/frag_person_info_change.xml
+++ b/app/src/main/res/layout/frag_person_info_change.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_gravity="center">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="?attr/actionBarSize"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -62,6 +64,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
+                android:background="@drawable/cancel"
                 android:text="변경" />
 
             <Button
@@ -69,6 +72,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
+                android:background="@drawable/cancel"
                 android:text="취소" />
         </LinearLayout>
     </LinearLayout>
