--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -28,6 +28,7 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:onClick="idCheck"
+                android:background="@drawable/check"
                 android:text="중복확인" />
 
         </LinearLayout>
