--- a/app/src/main/res/layout/frag_person_information.xml
+++ b/app/src/main/res/layout/frag_person_information.xml
@@ -26,6 +26,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:onClick="idCheck"
+            android:background="@drawable/check"
             android:text="확인" />
 
     </LinearLayout>
